--- a/Web/views/partials/head.ejs
+++ b/Web/views/partials/head.ejs
@@ -24,6 +24,7 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
 <link href="/static/fonts/icon-discord.css" rel="stylesheet">
 <link rel="stylesheet" href="/static/css/bulma-7.css">
+<link rel="stylesheet" href="/static/css/modern-ui.css">
 <link rel="stylesheet" href="/static/css/extensions.css">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
