--- a/Web/views/partials/header.ejs
+++ b/Web/views/partials/header.ejs
@@ -5,12 +5,6 @@
                     <img src="/static/img/logo.png" style="border-radius: 100%; margin-right: 0.5rem;" height="28" width="28" alt="Skynet logo">
                     Skynet
                 </a>
-
-                <button id="navbar-burger" class="navbar-burger" aria-label="menu" aria-expanded="false" onClick="$(this).toggleClass('is-active'); $('#navbar-menu').toggleClass('is-active').slideToggle('fast');">
-                    <span aria-hidden="true"></span>
-                    <span aria-hidden="true"></span>
-                    <span aria-hidden="true"></span>
-                </button>
             </div>
 
             <div id="navbar-menu" class="navbar-menu">
@@ -71,13 +65,13 @@
                 <% } else { %>
                 <div class="navbar-item">
                     <div class="buttons" style="gap: 0.5rem;">
-                        <a class="button is-small is-rounded" href="/add" style="background: rgba(255,255,255,0.15); color: white; border: 1px solid rgba(255,255,255,0.3);">
+                        <a class="button is-small is-rounded is-outline-modern" href="/add">
                             <span class="icon is-small">
                                 <i class="fa fa-plus"></i>
                             </span>
                             <span>Add Bot</span>
                         </a>
-                        <a class="button is-small is-rounded is-primary" href="/login" style="background: #14b8a6; border: none;">
+                        <a class="button is-small is-rounded is-primary is-modern" href="/login">
                             <span class="icon is-small">
                                 <i class="fa fa-sign-in"></i>
                             </span>
