Restore header script for toggle

--- a/Web/views/partials/header.ejs
+++ b/Web/views/partials/header.ejs
@@ -5,6 +5,11 @@
                     <img src="/static/img/logo.png" style="border-radius: 100%; margin-right: 0.5rem;" height="28" width="28" alt="Skynet logo">
                     Skynet
                 </a>
+                <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbar-menu">
+                    <span aria-hidden="true"></span>
+                    <span aria-hidden="true"></span>
+                    <span aria-hidden="true"></span>
+                </a>
             </div>
 
             <div id="navbar-menu" class="navbar-menu">
