Fix activity page: Show grid layout by default (remove is-hidden)

--- a/Web/views/partials/servers-section.ejs
+++ b/Web/views/partials/servers-section.ejs
@@ -82,7 +82,7 @@ SkynetUtil.showActivitySelections = () => {
 		</div>
 	</div>
 </nav>
-<div id="grid-layout" class="container is-hidden">
+<div id="grid-layout" class="container">
 	<% if (pageData.serverData.length > 0) { %>
 		<br>
 		<div class="columns">
