--- a/Web/views/partials/header.ejs
+++ b/Web/views/partials/header.ejs
@@ -63,10 +63,27 @@
                 </script>
 
                 <% if (authUser) { %>
-                <a id="nav-dashboard" class="navbar-item is-flex-centered" href="/dashboard" title="Go to dashboard" style="gap: 0.5rem;">
-                    <img class="image is-24x24" src="<%= authUser.avatar %>" style="border-radius: 100%; border: 2px solid rgba(255,255,255,0.3);" alt="<%= authUser.id %>">
-                    <span><%= authUser.username %></span>
-                </a>
+                <div class="navbar-item has-dropdown is-hoverable">
+                    <a class="navbar-link is-flex-centered" style="gap: 0.5rem;">
+                        <img class="image is-24x24" src="<%= authUser.avatar %>" style="border-radius: 100%; border: 2px solid rgba(255,255,255,0.3);" alt="<%= authUser.id %>">
+                        <span><%= authUser.username %></span>
+                    </a>
+                    <div class="navbar-dropdown is-right">
+                        <a class="navbar-item" href="/dashboard">
+                            <span class="icon is-small"><i class="fa fa-tachometer"></i></span>
+                            <span>Dashboard</span>
+                        </a>
+                        <a class="navbar-item" href="/account">
+                            <span class="icon is-small"><i class="fa fa-user-cog"></i></span>
+                            <span>Account Settings</span>
+                        </a>
+                        <hr class="navbar-divider">
+                        <a class="navbar-item" href="/logout">
+                            <span class="icon is-small"><i class="fa fa-sign-out"></i></span>
+                            <span>Logout</span>
+                        </a>
+                    </div>
+                </div>
                 <% } else { %>
                 <div class="navbar-item">
                     <div class="buttons" style="gap: 0.5rem;">
