feat: Add membership pricing page and Stripe checkout
- Create public /membership pricing page with tier comparison
- Add membership controller with Stripe checkout session creation
- Add PayPal checkout endpoint
- Create membership success page
- Add SubscriptionCheck task for expiration handling
- Add Membership link to navigation header
- Initialize subscription check on bot startup

--- a/Web/views/partials/header.ejs
+++ b/Web/views/partials/header.ejs
@@ -50,6 +50,12 @@
                     </span>
                     <span>Blog</span>
                 </a>
+                <a id="nav-membership" class="navbar-item" href="/membership">
+                    <span class="icon is-small">
+                        <i class="fa fa-star"></i>
+                    </span>
+                    <span>Membership</span>
+                </a>
                 <a id="nav-donate" class="navbar-item" href="/donate">
                     <span class="icon is-small">
                         <i class="fa fa-gift"></i>
