fix: Add dark text color to user dropdown menu items

--- a/Web/views/partials/header.ejs
+++ b/Web/views/partials/header.ejs
@@ -74,17 +74,17 @@
                         <img class="image is-24x24" src="<%= authUser.avatar %>" style="border-radius: 100%; border: 2px solid rgba(255,255,255,0.3);" alt="<%= authUser.id %>">
                         <span><%= authUser.username %></span>
                     </a>
-                    <div class="navbar-dropdown is-right">
-                        <a class="navbar-item" href="/dashboard">
+                    <div class="navbar-dropdown is-right" style="background: #fff;">
+                        <a class="navbar-item" href="/dashboard" style="color: #363636;">
                             <span class="icon is-small"><i class="fa fa-tachometer"></i></span>
                             <span>Dashboard</span>
                         </a>
-                        <a class="navbar-item" href="/account">
+                        <a class="navbar-item" href="/account" style="color: #363636;">
                             <span class="icon is-small"><i class="fa fa-user-cog"></i></span>
                             <span>Account Settings</span>
                         </a>
                         <hr class="navbar-divider">
-                        <a class="navbar-item" href="/logout">
+                        <a class="navbar-item" href="/logout" style="color: #363636;">
                             <span class="icon is-small"><i class="fa fa-sign-out"></i></span>
                             <span>Logout</span>
                         </a>
