fix: Logout callback and account settings template errors
- Add callback to req.logout() for Passport.js v0.6+ compatibility
- Pass success/error query params to account-settings template
- Simplify template variable checks

--- a/Web/views/pages/account-settings.ejs
+++ b/Web/views/pages/account-settings.ejs
@@ -55,7 +55,7 @@
 				Account Settings
 			</h1>
 
-			<% if (typeof success !== 'undefined' || req?.query?.success) { %>
+			<% if (success) { %>
 			<article class="message is-success">
 				<div class="message-body">
 					Account linked successfully!
@@ -63,7 +63,7 @@
 			</article>
 			<% } %>
 
-			<% if (typeof error !== 'undefined' || req?.query?.error) { %>
+			<% if (error) { %>
 			<article class="message is-danger">
 				<div class="message-body">
 					Failed to link account. Please try again.
